<resources>
    <string name="app_name">Android Beacon Demonstration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle" translatable="false"></string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="update_title">New update available!</string>
    <string name="update_update">Update</string>
    <string name="update_dismiss">Dismiss</string>
    <string name="noupdate_title">No updates available</string>
    <string name="noupdate_message">"You've got the latest available version of the app!"</string>

    <string name="menu_search">Search</string>
    <string name="menu_room">Locate</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_message">This app needs the location permission to be able to work correctly. You can grant it in the settings.</string>
    <string name="location_enable_message">Location seems to be disabled, you need to enable it for the app to work correctly!\nDo you want to enable it?</string>
    <string name="bluetooth_enable_message">Bluetooth seems to be disabled, you need to enable it for the app to work correctly!\nDo you want to enable it?</string>

    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="error">"Error occurred!"</string>

    <string name="exit_title">Exit</string>
    <string name="exit_message">Do you want to exit the app?</string>

    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="room_size">"Enter the room size: "</string>
    <string name="beaconNumberSelect">Select how many Beacons you want to use:</string>
    <string name="beaconNumber2">2 Beacons</string>
    <string name="beaconNumber3">3 Beacons</string>
    <string name="size_x" translatable="false">" X:"</string>
    <string name="size_y" translatable="false">"   Y:"</string>
    <string name="beacon1">"Enter the Beacon 1 location: "</string>
    <string name="beacon2">"Enter the Beacon 2 location: "</string>
    <string name="beacon3">"Enter the Beacon 3 location: "</string>
    <string name="select_beacons">Select Beacons</string>
    <string name="select_beacon1" translatable="false">"Beacon 1: "</string>
    <string name="select_beacon2" translatable="false">"Beacon 2: "</string>
    <string name="select_beacon3" translatable="false">"Beacon 3: "</string>
    <string name="select_beacon_not_selected">Not selected!</string>
    <string name="select_beacon_button">Select</string>
    <string name="room_setup_toast_data">"You haven't entered all the data!"</string>
    <string name="room_setup_toast_beacons">"You haven't selected all the beacons!"</string>
    <string name="search_toast_beacon" translatable="false">"Beacon "</string>
    <string name="search_toast_beacon_selected">" has been selected."</string>
    <string name="search_toast_beacon_already_selected">"is already selected as Beacon "</string>
    <string name="search_toast_beacon_dot" translatable="false">.</string>

    <string name="settings_theme">Theme:</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_distanceUnit">Distance unit:</string>
    <string name="settings_meters">Meters</string>
    <string name="settings_yards">Yards</string>
    <string name="settings_scanIntervalTime">Scan interval time in seconds:</string>
    <string name="settings_scanIntervalTimeToast">"Scan interval time is "</string>
    <string name="settings_timeBetweenScanIntervals">Time between scan intervals in seconds:</string>
    <string name="settings_timeBetweenScanIntervalsToast">"Time between scan intervals is "</string>
    <string name="settings_toastIntervalSecond">" second!"</string>
    <string name="settings_toastIntervalSeconds">" seconds!"</string>
    <string name="settings_android5and6warningDialog_title">Unaveable</string>
    <string name="settings_android5and6warningDialog_message">Scan interval time and Time between scan intervals can only be set on Android 7 and above due to older Android versions technical limitations!</string>
    <string name="settings_rssiFilter" translatable="false">"RSSI Filter: "</string>
    <string name="settings_NoRssiFilter">None</string>
    <string name="settings_RunningAverageRssiFilter" translatable="false">Running Average</string>
    <string name="settings_ArmaRssiFilter" translatable="false">Arma</string>
    <string name="settings_KalmanRssiFilter" translatable="false">Kalman</string>
    <string name="settings_SampleExpiration">"Sample Expiration: "</string>
    <string name="settings_DEFAULT_ARMA_SPEED">"Default Arma Speed: "</string>
    <string name="settings_KALMAN_R" translatable="false">"R: "</string>
    <string name="settings_KALMAN_Q" translatable="false">"Q: "</string>
    <string name="settings_RSSIwariningDialog_title">Warning</string>
    <string name="settings_RSSIwariningDialog_message">You changed the RSSI filter. This change requires an app restart.</string>

    <string name="about_version">Version:</string>
    <string name="about_version_number" translatable="false">" Alpha 0.1"</string>
    <string name="about_author">"Author: "</string>
    <string name="about_author_name" translatable="false">Leopold Juraga</string>
    <string name="about_check_for_updates">Check for updates</string>
</resources>