<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="hr.unipu.app.androidbeacondemonstration.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_room"
        android:name="hr.unipu.app.androidbeacondemonstration.ui.room.RoomSetupFragment"
        android:label="@string/menu_room"
        tools:layout="@layout/fragment_room_setup" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="hr.unipu.app.androidbeacondemonstration.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="hr.unipu.app.androidbeacondemonstration.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>